fix: allow removing members from an API see: https://gravitee.atlassian.net/browse/GKO-7